<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/event_list_change_sort"
        android:title="@string/action_bar_sort"
        android:icon="@drawable/ic_sort_white_48dp"
        app:showAsAction="ifRoom" >

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/event_list_sort_asc"
                    android:title="@string/action_bar_sort_asc"
                    android:checked="true"/>

                <item
                    android:id="@+id/event_list_sort_desc"
                    android:title="@string/action_bar_sort_desc" />

            </group>

        </menu>

    </item>

</menu>
