<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/event_list_activity"
            android:checked="false"
            android:icon="@drawable/ic_view_event_list_black_48dp"
            android:title="@string/event_list_activity_title" />

        <item
            android:id="@+id/calendar_activity"
            android:checked="false"
            android:icon="@drawable/ic_view_calendar_black_48dp"
            android:title="@string/calendar_activity_title" />

    </group>

    <group
        android:id="@+id/nav_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/preferences_activity"
            android:checked="false"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/preferences_activity_title" />

    </group>

</menu>
