<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Month header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <!-- Prev month button -->
        <ImageView
            android:id="@+id/calendar_prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_arrow_left_black_36dp"/>

        <!-- Current month -->
        <TextView
            android:id="@+id/calendar_month_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/calendar_prev_button"
            android:layout_toStartOf="@+id/calendar_next_button"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#222222"/>

        <!-- Next month button -->
        <ImageView
            android:id="@+id/calendar_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_arrow_right_black_36dp"/>
    </RelativeLayout>

    <!-- Days header -->
    <LinearLayout
        android:id="@+id/calendar_days_header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/calendar_day_header"
            android:text="@string/calendar_sunday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/calendar_day_header"
            android:text="@string/calendar_monday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/calendar_day_header"
            android:text="@string/calendar_tuesday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/calendar_day_header"
            android:text="@string/calendar_wednesday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/calendar_day_header"
            android:text="@string/calendar_thursday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/calendar_day_header"
            android:text="@string/calendar_friday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/calendar_day_header"
            android:text="@string/calendar_saturday"/>
    </LinearLayout>

    <!-- Days grid -->
    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="7"/>
</LinearLayout>
