<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <!-- Event start -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/view_event_start_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="end"
                    android:paddingEnd="@dimen/view_event_label_right_pad"
                    android:text="@string/event_start_label"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/view_event_start_field"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:gravity="center_vertical"/>

            </LinearLayout>

            <!-- Event end -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/view_event_end_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="end"
                    android:paddingEnd="@dimen/view_event_label_right_pad"
                    android:text="@string/event_end_label"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/view_event_end_field"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <!-- Event venue -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/view_event_venue_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="end"
                    android:paddingEnd="@dimen/view_event_label_right_pad"
                    android:text="@string/event_venue_label"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/view_event_venue_field"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <!-- Event location -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/view_event_location_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="end"
                    android:paddingEnd="@dimen/view_event_label_right_pad"
                    android:text="@string/event_location_label"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/view_event_location_field"
                    android:textColor="@color/link_colour"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <!-- Event note -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/view_event_note_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="end"
                    android:paddingEnd="@dimen/view_event_label_right_pad"
                    android:text="@string/event_note_label"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/view_event_note_field"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <!-- Event attendees -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/view_event_attendees_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="end"
                    android:paddingEnd="@dimen/view_event_label_right_pad"
                    android:text="@string/event_attendees_label"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/view_event_attendees_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
